[filewidgets] Fix KUrlNavigatorButton padding on breadcrumb

Use `QFontMetrics::size(Qt::SingleLine, text).width()` instead of
`QFontMetrics::boundingRect(text).width()`. As suggested by @dfaure, from an
empiric point of view, this seems to be a better replacement for
`QFontMetrics::width()` when applied to strings than the other two alternatives.

See also https://invent.kde.org/system/dolphin/-/merge_requests/22

BUG: 425570
FIXED-IN: 5.74