src/filewidgets/kurlnavigatorbutton.cpp
@@ -130,7 +130,7 @@ QSize KUrlNavigatorButton::sizeHint() const
     adjustedFont.setBold(m_subDir.isEmpty());
     // the minimum size is textWidth + arrowWidth() + 2 * BorderWidth; for the
     // preferred size we add the BorderWidth 2 times again for having an uncluttered look
-    const int width = QFontMetrics(adjustedFont).boundingRect(plainText()).width() + arrowWidth() + 4 * BorderWidth;
+    const int width = QFontMetrics(adjustedFont).size(Qt::TextSingleLine, plainText()).width() + arrowWidth() + 4 * BorderWidth;
     return QSize(width, KUrlNavigatorButtonBase::sizeHint().height());
 }
 
@@ -632,7 +632,7 @@ bool KUrlNavigatorButton::isTextClipped() const
 
     QFont adjustedFont(font());
     adjustedFont.setBold(m_subDir.isEmpty());
-    return QFontMetrics(adjustedFont).boundingRect(plainText()).width() >= availableWidth;
+    return QFontMetrics(adjustedFont).size(Qt::TextSingleLine, plainText()).width() >= availableWidth;
 }
 
 void KUrlNavigatorButton::updateMinimumWidth()
